18478
{code}
scala> scala.reflect.runtime.universe.reify { var a:Int = _ }
<console>:11: error: local variables must be initialized
              scala.reflect.runtime.universe.reify { var a:Int = _ }
                                                         ^
{code}
